--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,26 +1,24 @@
-    .wrapper {
-        text-align: center;
-        width: 90%;
-        margin: auto;
-    }
+.wrapper {
+  text-align: center;
+  width: 90%;
+  margin: auto;
+}
 
-    #card {
-        width: 35%;
-        height: auto;
-    }
+#card {
+  width: auto;
+  height: 75%;
+}
 
-    .btn {
-        border: none;
-        padding: 10px 15px;
-        margin: 15px;
-        background: #333;
-        color: #fff;
-        cursor: pointer;
+.btn {
+  border: none;
+  font-size: 1.5em;
+  padding: 10px 15px;
+  margin: 15px;
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+}
 
-
-    }
-
-    .btn:hover {
-        opacity: 0.9;
-    }
-
+.btn:hover {
+  opacity: 0.9;
+}
