--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,3 +22,27 @@
 .btn:hover {
   opacity: 0.9;
 }
+
+.sideBtn {
+  font-size: 1.25em;
+  background: #333;
+  color: #fff;
+  padding: 5px 10px 5px 35px;
+  position: absolute;
+  left: -25px;
+  top: 25px;
+  cursor: pointer;
+}
+
+.sideBtn:hover {
+  left: 0px;
+  opacity: 0.9;
+  transition-duration: 1s;
+}
+
+.viewCards img {
+  margin-top: 100px;
+  width: 100px;
+  height: auto;
+  border: thin solid #333;
+}
