--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,3 +55,11 @@
   position: absolute;
   display: none;
 }
+
+.numberCards {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 2em;
+  font-weight: bold;
+}
