--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,11 +14,20 @@ body {
 }
 
 .wrapper h1 {
-  margin-top: 35px;
-  color: #FFF;
+  font-weight: bold;
+    padding: 5px 10px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: rgb(0, 0, 0 , 0.5);
+    border: none;
+    width: 50%;
+	margin: 35px auto 20px;
+    color: #fff;
 }
 
 #card {
+max-width: 300px;
   min-width: 150px;
   width: 30%;
   height: auto;
@@ -87,13 +96,13 @@ body {
     position: absolute;
     top: 5px;
     right: 10px;
-    font-size: 1.25em;
+    font-size: 1em;
     font-weight: bold;
     padding: 5px 10px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    background: rgb(0, 0, 0 , 0.5);
+    background: #333;
 }
 
 #instructions {
