--- a/styles/styles.css
+++ b/styles/styles.css
@@ -184,8 +184,44 @@ max-width: 300px;
 	opacity: 0.8;
 }
 
-.settings_wrap {
-	margin-top: 50px;
-	padding: 10px;
-	background: rgb(255, 255,255, 0.5);
+/********** SETTINGS *********/
+
+.settings_wrapper {
+  text-align: center;
+    margin: auto;
+    padding: 15px;
+    border-bottom: 5px solid #333;
 }
+
+.settings_wrapper h1 {
+  color: #FFF;
+  margin-top: 50px;
+  padding: 10px;
+  background: rgb(0, 0, 0, 0.5);
+  border-radius: 3px;
+}
+
+#editRules h3 {
+  color: #FFF;
+    background: rgb(0, 0, 0 , 0.5);
+    padding: 3px;
+    border-radius: 3px;
+}
+
+.settings_input {
+  width: 80%;
+  padding: 3px;
+  border: 1px solid #333;
+  border-radius: 3px;
+}
+
+.settings_btn {
+    color: #FFF;
+    background: green;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
