--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,15 +15,16 @@ body {
 
 .wrapper h1 {
   font-weight: bold;
-    padding: 5px 10px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    background: rgb(0, 0, 0 , 0.5);
-    border: none;
-    width: 50%;
-	margin: 35px auto 20px;
-    color: #fff;
+      padding: 5px 10px;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+      background: rgb(0, 0, 0 , 0.5);
+      border: none;
+      font-size: 1.75em;
+      width: 75%;
+      margin: 45px auto 20px;
+      color: #fff;
 }
 
 #card {
