--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@ body {
   text-align: center;
     margin: auto;
     background-image: url(../images/background.jpg);
+	height: 100vh;
     padding: 15px;
     border-bottom: 5px solid #333;
 }
@@ -127,13 +128,14 @@ max-width: 300px;
 #homescreen_prompt {
 	background: #FFF;
 	position: absolute;
-   left: 45vw;
+   	left: 10px;
 	top: -10px;
 	padding: 10px 20px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
    border: solid 1px #333;
+	width: 200px;
 }
 
 #homescreen_prompt button {
@@ -165,8 +167,7 @@ max-width: 300px;
 .home_wrapper {
 	background-image: url(../images/background.jpg);
     padding: 15px;
-	min-height: 750px;
-	height: 100%;
+	height: 100vh;
 	width: auto;
 	overflow: hidden;
 	text-align: center;
@@ -251,19 +252,19 @@ max-width: 300px;
 .settings_btn {
     color: #FFF;
     background: green;
-    padding: 10px 15px;
+    padding: 15px 25px;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
     margin-top: 15px;
     cursor: pointer;
 }
 
 #king_card img {
   position: fixed;
-    bottom: -100px;
+    bottom: -200px;
     width: 60%;
-    right: 0px;
+    left: 25px;
     max-width: 250px;
-    transform: rotate(-30deg);
+    transform: rotate(30deg);
 }
 
